<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle_whitetop_cure"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:layout_gravity="bottom"
    android:paddingBottom="16.6dp">

    <ImageView
        android:layout_width="44dp"
        android:layout_height="3.5dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:src="@drawable/rectangle_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16.7dp"
        android:layout_marginTop="14.8dp"
        android:layout_marginRight="16.7dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/sfpro_display_medium"
            android:letterSpacing="0.0525"
            android:text="@string/booking_expire_in"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfpro_display_semibold"
            android:letterSpacing="0.0525"
            android:text="@string/_20_30_min"
            android:textColor="#feb13f"
            android:textSize="17sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16.7dp"
        android:layout_marginTop="16.8dp"
        android:layout_marginRight="16.7dp"
        android:background="@color/viewline" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16.7dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="16.7dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/circle_blueoutline" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="85dp"
                android:layout_gravity="center"
                android:background="@drawable/dotted_lineblue"
                android:layerType="software"
                android:orientation="vertical" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/circle_blueoutline" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sfpro_display_medium"
                        android:letterSpacing="0.0525"
                        android:text="@string/pickup_address"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:fontFamily="@font/sfpro_display_medium"
                        android:letterSpacing="0.0525"
                        android:lineSpacingExtra="2dp"
                        android:text="@string/dinesh_roadtxt"
                        android:textColor="@color/silver"
                        android:textSize="14.5sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/direction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_direction" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sfpro_display_medium"
                        android:letterSpacing="0.0525"
                        android:lineSpacingExtra="5dp"
                        android:text="@string/direction"
                        android:textColor="@color/silver"
                        android:textSize="13.7sp" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="13.7dp"
                android:layout_marginTop="15dp"
                android:background="@color/viewline" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13.7dp"
                    android:layout_marginTop="16.8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sfpro_display_medium"
                        android:letterSpacing="0.0525"
                        android:text="@string/scan_qr_code_from_ride"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:fontFamily="@font/sfpro_display_medium"
                        android:letterSpacing="0.0525"
                        android:lineSpacingExtra="2dp"
                        android:text="@string/scan_qr_code_to_get_otp_type_otp_non_vehicle_keypad_and_start_the_ride"
                        android:textColor="@color/silver"
                        android:textSize="14.5sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_qr_code_6" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16.7dp"
        android:layout_marginTop="16.8dp"
        android:layout_marginRight="16.7dp"
        android:background="@color/viewline" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16.7dp"
        android:layout_marginTop="14.8dp"
        android:layout_marginRight="16.7dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/sfpro_display_medium"
            android:letterSpacing="0.0525"
            android:text="@string/change_of_mind"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/cancelBooking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sfpro_display_semibold"
            android:letterSpacing="0.0525"
            android:text="@string/cancel_booking"
            android:textColor="@color/light_red"
            android:textSize="14.3sp" />
    </LinearLayout>

    <Button
        android:id="@+id/scan_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16.7dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16.7dp"
        android:background="@drawable/gradient_orange"
        android:elevation="0.8dp"
        android:fontFamily="@font/sfpro_display_medium"
        android:letterSpacing="0.0525"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/scan_or_enter_vehicle_number"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18.7sp" />

</LinearLayout>